# Examples

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md
Gravity/3-body/: Makefile  main.cpp
Gravity/3-body/shaders/: basic.vs
Misc/bloom-test/: CMakeLists.txt
Misc/bloom-test/include/: Bloom.hpp
Misc/bloom-test/shaders/: basic.fs
Misc/bloom-test/shaders/postProcessing/: bloom_blur_h.fs  bloom_blur_v.fs  bloom_composite.fs  bloom_extract.fs  quad.vs
Misc/bloom-test/src/: main.cpp
Misc/bloom-test/src/postEffects/: Bloom.cpp
Misc/textures-test/: CMakeLists.txt  main.cpp
Misc/textures-test/shaders/: basic.fs
